# rkvs

./: Cargo.toml  README.md  run_benchmarks.sh
.github/workflows/: ci.yml
assets/benchmarks/: batch_concurrent_bench_results.json  batch_operations_bench_results.json  concurrent_bench_results.json  operations_bench_results.json  sharding_overhead_bench_results.json
benches/: README.md  batch_concurrent_bench.rs  batch_operations_bench.rs  benchmark_helpers.rs  concurrent_bench.rs  operations_bench.rs  realistic_benchmark.rs  rkvs_benchmarks.rs  sharding_overhead_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: batch_ops.rs  configuration_ops.rs  namespace_management.rs  namespace_ops.rs  persistence_snapshot.rs
scripts/: plot_benchmarks.py
src/: data_table.rs  error.rs  lib.rs  manager.rs  mod.rs  namespace.rs  persistence.rs  types.rs
src/manager/: autosave.rs  builder.rs  inspection.rs  management.rs  mod.rs  persistence.rs
src/namespace/: config.rs  helpers.rs  inspection.rs  mod.rs  ops_batch.rs  ops_single.rs
tests/: manager_tests.rs  namespace_tests.rs  persistence_integration.rs
