[package]
name = "rkvs"
version = "0.2.0"
edition = "2021"
description = "A high-performance, namespace-based key-value storage system with async operations and batch processing"
authors = ["RKVS Contributors"]
license = "MIT"
repository = "https://github.com/Tomasz-Bak/rkvs"
readme = "README.md"
keywords = ["key-value", "storage", "database", "async", "kv-store"]
categories = ["database", "data-structures", "asynchronous"]

[lib]
name = "rkvs"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
thiserror = "1.0"
tempfile = "3.0"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "rkvs_benchmarks"
harness = false
